--- a/tempweather/partials/navbar.hbs
+++ b/tempweather/partials/navbar.hbs
@@ -9,6 +9,11 @@
           <a href="/about">ABOUT</a>
           <a href="/weather">WEATHER</a>
         </div>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
       </div>
     </div>
   </nav>
